# diffsentinel

./: .diffsentinel.toml  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
diffsentinel/: __init__.py  agent.py  analyzer.py  cli.py  demo.py  demo_cache.py  diff.py  github_review.py  hooks.py  memory.py  onboarding.py  patcher.py  rules.py  sarif.py  scanner.py  schema.py  settings.py  shell.py  tui.py
docs/: BUILD_IN_PUBLIC_POSTS.md  DAILY_PROGRESS_DAY1.md  DAILY_PROGRESS_DAY2.md  HACKATHON_BRIEF.md  PHASE1_PITCH_DECK.md  PHASE1_PROGRESS.md  PHASE1_SUBMISSION_PACK.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.3.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md
examples/github-action/: diffsentinel.yml
samples/: async_blocking.py  clone_in_loop.py  missing_await.py  nested_loop.py  requests_blocking.py
tests/: test_agent.py  test_analyzer.py  test_autopilot.py  test_cli.py  test_demo.py  test_demo_cache.py  test_diff.py  test_entrypoints.py  test_github_review.py  test_hooks.py  test_interactive_agent.py  test_memory.py  test_onboarding.py  test_patcher.py  test_rules.py  test_sarif.py  test_scanner.py  test_shell.py  test_tui.py
