[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "diffsentinel"
version = "0.7.0"
description = "Terminal-native local diff performance auditor with safe one-command fixes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "code-review", "performance", "asyncio", "terminal"]
dependencies = [
    "openai>=1.54.0",
    "pydantic>=2.8.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
diffsentinel = "diffsentinel.cli:main"

[project.urls]
Homepage = "https://github.com/Vasanthdev2004/diffsentinel"
Repository = "https://github.com/Vasanthdev2004/diffsentinel"
Issues = "https://github.com/Vasanthdev2004/diffsentinel/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
